- Change to base.html viewport scaling now locked like home page - Moved overlapping home.less navbar rules to navbar.less - Fix for collapsing menus on FF

--- a/airbitz/airbitz/static/less/home.less
+++ b/airbitz/airbitz/static/less/home.less
@@ -24,23 +24,11 @@ body.home {
     }
 
     .navbar {
-        font-size: 14px;
-
         .logo {
             max-width: none;
         }
-        .typeahead, .tt-query, .tt-hint {
-            padding: 8px 12px;
-        }
     }
 
-    .navbar-ab .navbar-nav > li > a {
-        color: @brand-primary;
-    }
-    .navbar-nav>li>a {
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
 
 
 
